--- a/Automation.ResolumeCompositionSwitcher.Core/Automation.ResolumeCompositionSwitcher.Core.csproj
+++ b/Automation.ResolumeCompositionSwitcher.Core/Automation.ResolumeCompositionSwitcher.Core.csproj
@@ -3,12 +3,11 @@
   <PropertyGroup>
     <TargetFramework>net6.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
-    <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Services\" />
+    <PackageReference Include="Ardalis.GuardClauses" Version="4.0.1" />
   </ItemGroup>
 
 </Project>
