--- a/Automation.ResolumeCompositionSwitcher.Core/Automation.ResolumeCompositionSwitcher.Core.csproj
+++ b/Automation.ResolumeCompositionSwitcher.Core/Automation.ResolumeCompositionSwitcher.Core.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Ardalis.GuardClauses" Version="4.0.1" />
+    <PackageReference Include="Refit" Version="6.3.2" />
   </ItemGroup>
 
 </Project>
