working local storage, app messages, admin only manifest

--- a/Automation.ResolumeCompositionSwitcher.Core/Automation.ResolumeCompositionSwitcher.Core.csproj
+++ b/Automation.ResolumeCompositionSwitcher.Core/Automation.ResolumeCompositionSwitcher.Core.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Ardalis.GuardClauses" Version="4.0.1" />
+    <PackageReference Include="LocalStorage" Version="2.1.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
     <PackageReference Include="Refit" Version="6.3.2" />
   </ItemGroup>
 
